kanc/src/tests/sample_code/should_fail/multi_file/bind/expected_term_got_mod/src/foo.k
pub type Foo {
    .c: Foo,
}
